[package]
authors = ["Scott <MabezDev@gmail.com>"]
edition = "2018"
name = "watch-apps-experiments"
version = "0.1.0"

[dependencies]
cortex-m = "0.5.7"
cortex-m-rt = "0.6.3"
cortex-m-semihosting = "0.3.1"
panic-semihosting = "0.5.0"
nb = "0.1.1"
heapless = "0.4.0"
mabez-watch-sdk-core = { path = "../../projects/mabez-watch-sdk-core" }
embedded-graphics = "0.4.1"
ssd1351 = "0.1.3"

# Uncomment for the panic example.
# panic-itm = "0.4.0"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.3.5"

# Uncomment for the device example.
[dependencies.stm32l432xx-hal]
version = "0.2.3"

[dependencies.stm32l4]
version = "0.2.1"
features = ["stm32l4x2", "rt"]


# this lets you use `cargo fix`!
[[bin]]
name = "watch-apps-experiments"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
